# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  demo.cast  diff_builder.py  gendiff.py  parser.py  parser_args.py
gendiff/formatters/: formatter_selector.py  json_formatter.py  plain.py  stylish.py
gendiff/modules/: __init__.py  gendiff.py  parser.py  parser_args.py
gendiff/modules/formatters/: json_formatter.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_diff.json  expected_json_output.json
